# PiFC

./: .gitignore  Cargo.toml  README.md  base.cfg
assets/: base.cfg
configs/: base.cfg  webserve.cfg
core/: Cargo.toml
core/src/: lib.rs
core/src/fccore/: config.rs  configbutton.rs  configled.rs  core.rs  core_logic.rs  log.rs  mod.rs
log/: Cargo.toml
log/src/: lib.rs
physical/: Cargo.toml  README.md
physical/src/: gpio.rs  light.rs  polled_button.rs
scripts/: deploy.sh
src/: fccore.rs  main.rs
src/fcconfig/: fcconfig.rs  mod.rs
src/fccore/: config.rs  configbutton.rs  configled.rs  core.rs  fcconfig.rs  fccore.rs  fccore_logic.rs  fclog.rs  log.rs  mod.rs
src/fccore/motors/: mod.rs  motor.rs  motorid.rs  state.rs
src/fccore/sensors/: mod.rs  state.rs
src/fccore/telemetry/: mod.rs  state.rs
src/fcwebserve/: config.rs  core_config.rs  log.rs  mod.rs  motor_test.rs  status.rs  webserve.rs
src/physical/: adafruit_oled.rs  button.rs  gpio.rs  light.rs  mod.rs  polled_button.rs  screen.rs
src/pi/: adafruit_oled.rs  button.rs  gpio.rs  light.rs  mod.rs  polled_button.rs  screen.rs
tools/: build-rust-cc.sh  install_snappy.sh
web/: index.html
web/main/: index.html  site.html
web/main/blake_temp/: cover.css  index.html
web/main/css/: bootstrap.css  cover.css  cpanel.css  header.css  site.css
web/main/fonts/: Demo License.txt
web/main/img/: logo.xcf  logo_black.xcf  logo_blue.xcf  (+1 more)
webserve/: Cargo.toml
webserve/src/: lib.rs
webserve/src/fcwebserve/: arming.rs  config.rs  mod.rs  motor_test.rs  status.rs  webserve.rs  wlog.rs
(+13 files in other folders)
